fix: popup shadow showing when hidden on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -383,6 +383,10 @@ button.keys:disabled {
  padding: 0.75em;
 }
 
+.popup.hidden {
+  display: none;
+}
+
 .popupBtnDiv {
   display: flex;
   justify-content: center;
